Automatically backed up by Learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -575,7 +575,8 @@
    "outputs": [],
    "source": [
     "def layout(x_range = None, y_range = None, options = {}):\n",
-    "    laypass"
+    "    layout = {}\n",
+    "    "
    ]
   },
   {
