--- a/index.ipynb
+++ b/index.ipynb
@@ -576,7 +576,7 @@
    "source": [
     "def layout(x_range = None, y_range = None, options = {}):\n",
     "    layout = {}\n",
-    "    "
+    "    if isinsta"
    ]
   },
   {
