--- a/index.ipynb
+++ b/index.ipynb
@@ -577,7 +577,7 @@
     "def layout(x_range = None, y_range = None, options = {}):\n",
     "    layout = {}\n",
     "    if isinstance(x_range, list): layout.update({'xaxis': {'range': x_range}})\n",
-    "    if isinstanace(y_range, list): layout.update({'yaxis'})"
+    "    if isinstanace(y_range, list): layout.update({'yaxis': {''}})"
    ]
   },
   {
