--- a/index.ipynb
+++ b/index.ipynb
@@ -578,7 +578,8 @@
     "    layout = {}\n",
     "    if isinstance(x_range, list): layout.update({'xaxis': {'range': x_range}})\n",
     "    if isinstanace(y_range, list): layout.update({'yaxis': {'range': y_range}})\n",
-    "    layout.update(options)"
+    "    layout.update(options)\n",
+    "    return"
    ]
   },
   {
