Automatically backed up by Learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -570,7 +570,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -579,7 +579,7 @@
     "    if isinstance(x_range, list): layout.update({'xaxis': {'range': x_range}})\n",
     "    if isinstanace(y_range, list): layout.update({'yaxis': {'range': y_range}})\n",
     "    layout.update(options)\n",
-    "    return"
+    "    return layout"
    ]
   },
   {
