Automatically backed up by Learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -793,7 +793,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 26,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -812,9 +812,45 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 27,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "application/vnd.plotly.v1+json": {
+       "data": [
+        {
+         "mode": "lines",
+         "name": "data",
+         "type": "scatter",
+         "uid": "a83b1a86-7e3f-11e9-9f08-958803d48f4d",
+         "x": [
+          4,
+          5,
+          6
+         ],
+         "y": [
+          10,
+          5,
+          1
+         ]
+        }
+       ],
+       "layout": {
+        "title": "The big picture"
+       }
+      },
+      "text/html": [
+       "<div id=\"19bf2da7-34cb-464e-a1a7-92d83ee02cf4\" style=\"height: 525px; width: 100%;\" class=\"plotly-graph-div\"></div><script type=\"text/javascript\">require([\"plotly\"], function(Plotly) { window.PLOTLYENV=window.PLOTLYENV || {};window.PLOTLYENV.BASE_URL=\"https://plot.ly\";Plotly.newPlot(\"19bf2da7-34cb-464e-a1a7-92d83ee02cf4\", [{\"mode\": \"lines\", \"name\": \"data\", \"x\": [4, 5, 6], \"y\": [10, 5, 1], \"type\": \"scatter\", \"uid\": \"a8418146-7e3f-11e9-9f08-958803d48f4d\"}], {\"title\": \"The big picture\"}, {\"showLink\": true, \"linkText\": \"Export to plot.ly\"})});</script>"
+      ],
+      "text/vnd.plotly.v1+html": [
+       "<div id=\"19bf2da7-34cb-464e-a1a7-92d83ee02cf4\" style=\"height: 525px; width: 100%;\" class=\"plotly-graph-div\"></div><script type=\"text/javascript\">require([\"plotly\"], function(Plotly) { window.PLOTLYENV=window.PLOTLYENV || {};window.PLOTLYENV.BASE_URL=\"https://plot.ly\";Plotly.newPlot(\"19bf2da7-34cb-464e-a1a7-92d83ee02cf4\", [{\"mode\": \"lines\", \"name\": \"data\", \"x\": [4, 5, 6], \"y\": [10, 5, 1], \"type\": \"scatter\", \"uid\": \"a8418146-7e3f-11e9-9f08-958803d48f4d\"}], {\"title\": \"The big picture\"}, {\"showLink\": true, \"linkText\": \"Export to plot.ly\"})});</script>"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    }
+   ],
    "source": [
     "trace4 = trace_values([4, 5, 6], [10, 5, 1], mode = 'lines')\n",
     "last_layout = layout(options = {'title': 'The big picture'})\n",
